--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,68 @@
 <head>
   <meta charset="utf-8">
   <title>Break Into Us</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="breakin.css">
-  <script type="text/javascript" src="breakin.js" defer></script>
 </head>
 <body>
+  <header>
+    Break Into Us
+  </header>
+  <main>
+    <div id="instruction"></div>
+    <ul id="clues"></div>
+    <div id="lock"></div>
+  </main>
+  <aside id="score"></aside>
+  <footer>
+    &copy; <a href="https://danq.me/">Dan Q</a> 2020
+  </footer>
 
+  <template id="padlock" class="padlock">
+    <div class="padlock-shackle"></div>
+    <div class="padlock-body">
+      <div class="digits spinner-digits"></div>
+
+      <div class="lock-controls">
+        <button class="unlock">
+          Unlock
+        </button>
+      </div>
+    </div>
+  </template>
+
+  <template id="spinner-digit-wrapper">
+    <div class="digit-wrapper">
+      <button class="digit-up">
+        <svg viewBox="0 0 8.135 8.382">
+          <g transform="translate(0 -288.62)">
+            <path transform="matrix(-1.3161 0 0 1.5658 8.3325 -163.32)" d="m6.1021 293.84h-5.7228l2.8614-4.9561z"/>
+          </g>
+        </svg>
+      </button>
+      <input type="number" class="digit-value">
+      <ul class="digit">
+        <li data-value="9">9</li>
+        <li data-value="8">8</li>
+        <li data-value="7">7</li>
+        <li data-value="6">6</li>
+        <li data-value="5">5</li>
+        <li data-value="4">4</li>
+        <li data-value="3">3</li>
+        <li data-value="2">2</li>
+        <li data-value="1">1</li>
+        <li data-value="0">0</li>
+      </ul>
+      <button class="digit-down">
+        <svg viewBox="0 0 8.135 8.382">
+          <g transform="rotate(180) translate(-8.2 -296)">
+            <path transform="matrix(-1.3161 0 0 1.5658 8.3325 -163.32)" d="m6.1021 293.84h-5.7228l2.8614-4.9561z"></path>
+          </g>
+        </svg>
+      </button>
+    </div>
+  </template>
+
+  <script type="text/javascript" src="breakin.js" defer></script>
 </body>
 </html>
