Add workaround to IntersectionObserver not treating invisible numbers as offscreen in Chrome for Android.

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   </header>
   <main>
     <div id="instruction"></div>
-    <ul id="clues"></div>
+    <ul id="clues"></ul>
     <div id="lock"></div>
   </main>
   <aside id="score"></aside>
