Intro page and puzzle launcher

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,28 @@
     &copy; <a href="https://danq.me/">Dan Q</a> 2020
   </footer>
 
+  <dialog></dialog>
+
+  <template id="loading">
+    <div class="dialog-contents">
+      <p>
+        Loading... please wait...
+      </p>
+    </div>
+  </template>
+
+  <template id="intro">
+    <div class="dialog-contents">
+      <h1>Let's break some locks!</h1>
+      <p>
+        Use your logic skills to decipher the clues and work out the combination.
+      </p>
+    </div>
+    <div class="dialog-buttons">
+      <button data-action="start">Start</button>
+    </div>
+  </template>
+
   <template id="padlock" class="padlock">
     <div class="padlock-shackle"></div>
     <div class="padlock-body">
