--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    Break Into Us
+    Break Into <span class="dot">.</span> Us
   </header>
   <main>
     <div id="instruction"></div>
@@ -34,7 +34,7 @@
     <div class="dialog-contents">
       <h1>Let's break some locks!</h1>
       <p>
-        Use your logic skills to decipher the clues and work out the combination.
+        Use your logic skills to decipher the clues and work out the combinations.
       </p>
     </div>
     <div class="dialog-buttons">
