--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,8 @@
   <header>
     Break Into <span class="dot">.</span> Us
   </header>
+  <div id="instruction"></div>
   <main>
-    <div id="instruction"></div>
     <ul id="clues"></ul>
     <div id="lock"></div>
   </main>
@@ -65,18 +65,7 @@
         </svg>
       </button>
       <input type="number" class="digit-value">
-      <ul class="digit">
-        <li data-value="9">9</li>
-        <li data-value="8">8</li>
-        <li data-value="7">7</li>
-        <li data-value="6">6</li>
-        <li data-value="5">5</li>
-        <li data-value="4">4</li>
-        <li data-value="3">3</li>
-        <li data-value="2">2</li>
-        <li data-value="1">1</li>
-        <li data-value="0">0</li>
-      </ul>
+      <ul class="digit"></ul>
       <button class="digit-down">
         <svg viewBox="0 0 8.135 8.382">
           <g transform="rotate(180) translate(-8.2 -296)">
