--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,10 @@
   </main>
   <aside id="score"></aside>
   <footer>
-    &copy; <a href="https://danq.me/">Dan Q</a> 2020
+    <ul>
+      <li>&copy; <a href="https://danq.me/">Dan Q</a> 2020</li>
+      <li><a href="https://github.com/dan-q/Break-Into-Us"><abbr title="GNU General Public License v3">GPLv3</abbr></a></li>
+    </ul>
   </footer>
 
   <dialog></dialog>
