Show lock list.

--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,23 @@
     </div>
   </template>
 
+  <template id="choose">
+    <div class="dialog-contents">
+      <h1>Choose a lock</h1>
+      <table>
+        <thead>
+          <tr>
+            <th>Lock</th>
+            <th>Difficulty</th>
+            <th>Status</th>
+            <th><!-- actions --></th>
+          </tr>
+        </thead>
+        <tbody id="lock-list"></tbody>
+      </table>
+    </div>
+  </template>
+
   <template id="padlock" class="padlock">
     <div class="padlock-shackle"></div>
     <div class="padlock-body">
