Expanded initial instructions.

--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,25 @@
     <div class="dialog-buttons">
       <button data-action="start">Start</button>
     </div>
+    <div class="dialog-contents">
+      <h2>How to play</h2>
+      <ul>
+        <li>Each lock has only one valid combination.</li>
+        <li>Use the clues to work out what it is.</li>
+        <li>Pay attention to the digits available: some locks have more than others.</li>
+        <li>There are two tutorial locks to get you started, but after you've broken the first lock you can jump around at will: pick locks based on difficulty, try to break them all, etc.</li>
+        <li>Your progress will be saved into browser storage (unless you're in private mode).</li>
+      </ul>
+      <h2>About</h2>
+      <p>
+        <p>
+          Read more about the game on a blog post (to follow) or <a href="https://github.com/dan-q/Break-Into-Us">get the source code</a>.
+        </p>
+      </p>
+    </div>
+    <div class="dialog-buttons">
+      <button data-action="start">Start</button>
+    </div>
   </template>
 
   <template id="choose">
