--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <title>Break Into Us</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="breakin.css">
+  <link rel="manifest" href="/manifest.json">
 </head>
 <body>
   <header>
